# asistente-psicologia-rag

./: .env.template  .gitignore  README.md  compare_embeddings.py  create_database.py  main.py  mock_esp32_client.py  pyproject.toml  query_data.py  requirements.txt
.github/workflows/: ci.yml
app/: db.py  main.py
app/core/: security.py
app/routes/: auth_routes.py  context_routes.py  esp32_routes.py  report_routes.py  user_routes.py
app/services/email/: resend_email_service.py
app/templates/: __init__.py
app/templates/email/: factor_updated.html  welcome_email.html
app/utils/: audio_processing.py  encryption.py  whisper_utils.py
chatbot/: main.py
chatbot/auth/: authentication.py
chatbot/chat/: chat_loop.py
chatbot/chromadb_utils/: create_chroma_db.py  load_chroma_db_data.py
chatbot/core/: chat_chain.py  extract_user_info.py  gemini_service.py  langchain_service.py  redis_client.py  system_prompt_template.py  tts_engine.py  whisper_engine.py
chatbot/db/: connection.py  cursor.py  database.py  models.py  user.py  user_repository.py
data/books/: depression.md
frontend/: main.py
frontend/assets/: style.css
frontend/components/: sidebar.py
frontend/services/: api.py
frontend/streamlit/: config.toml
frontend/views/: dashboard.py  users.py
