[project]
name = "langchaing-rag-psicologia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.2",
    "email-validator>=2.3.0",
    "fastapi>=0.118.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
